--- a/concourse.yml
+++ b/concourse.yml
@@ -24,21 +24,7 @@ jobs:
     trigger: true
 
   - task: run tests
-    config:
-      platform: linux
-      image_resource:
-        type: docker-image
-        source: {repository: node, tag: "5"}
-      inputs:
-        - name: repo
-      run:
-        path: sh
-        args:
-          - -exc
-          - |
-            cd repo
-            npm install
-            npm test
+    file: repo/concourse/test.yml
 
 - name: build
   public: true
